--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "jquery": "^3.7.0"
+        "alpinejs": "^3.13.0",
+        "jquery": "^3.7.0",
+        "select2": "4.1.0-rc.0"
     }
 }
