--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "alpinejs": "^3.13.0",
+        "chart.js": "^4.4.0",
         "dayjs": "^1.11.10",
         "jquery": "^3.7.0",
         "select2": "4.1.0-rc.0"
